# redpen

./: .gitignore  DECISIONS.md  README.md  app.json  manifest.json  package.json
.anna/: app.json  dev-app.json  executas.lock.json
.github/workflows/: ci.yml  release-binaries.yml
bundle/: anna-tool-ids.js  app.js  index.html  styles.css
data/fixtures/: contract_seed.jsonl
docs/: AUDIT_REPORT.md  friction-log.md
docs/assets/: _asset-utilities.css  _cute.css  _tailwind.config.snippet.ts  _tokens.css  export.cjs  generate-devpost-gallery.html  generate-devpost-thumbnail.html  generate-og-image.html  generate-readme-hero.html  generate-youtube-thumbnail.html  package-lock.json  sanity-check.html
executas/redpen/: crypto_helper.py  executa.json  plugin.py  pyproject.toml
executas/redpen/.anna/: executa.json
fixtures/: seed.jsonl
public/: pitch.html
scripts/: bench.py  record-redpen.mjs  screenshot-redpen.mjs  verify_offline.py
tests/: test_plugin.py
