[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-dev-redpen"
version = "1.2.0"
description = "Python Executa plugin for RedPen contract redlining"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0"
]

[project.scripts]
tool-dev-redpen = "plugin:main"

[tool.hatch.build.targets.wheel]
only-include = ["plugin.py", "crypto_helper.py"]
