[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-edycutjong-redpen-8e7dgabc"
version = "1.2.0"
description = "Python Executa plugin for RedPen contract redlining"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0,<49"
]

[project.scripts]
tool-edycutjong-redpen-8e7dgabc = "plugin:main"

[tool.hatch.build.targets.wheel]
only-include = ["plugin.py", "crypto_helper.py"]
